# OcuGuard

./: .env.example  AGENTS.md  Dockerfile  README.md  Spec.md  ambient_luminance.py  app.py  be_my_eyes.py  contributing.md  ergonomic_schedule.py  eye_sentinel.py  gaze_compass.py  index.html  mcp_agent_server.py  mcp_server_config.json  mcp_sse_server.py  plugin_interface.py  preop_waitlist.py  pyproject.toml  pytest_log.txt  requirements.txt  schemas.py  serve.py  smithery.yaml  supervisor.py  tabular_layout_speech.py  test-output.xml  test_triage_agent.py
